tests/ui/box/issue-82446.stderr
error[E0308]: mismatched types
  --> $DIR/issue-82446.rs:11:9
   |
LL |         val
   |         ^^^ expected `Box<dyn MyTrait>`, found `&Box<dyn MyTrait>`
   |
   = note: expected struct `Box<(dyn MyTrait + 'static)>`
           found reference `&Box<(dyn MyTrait + 'static)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
